bk_ida/gccida/g1/assemble_string
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assemble_string/src/varasm.c:1817:7: error: use of undeclared identifier 'byte_6F9A58'
v11 = byte_6F9A58[*( unsigned __int8 *)v7]; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assemble_string/src/varasm.c:1851:6: error: use of undeclared identifier 'byte_6F9A58'
v9 = byte_6F9A58[( unsigned int)j]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assemble_string/src/obj/varasm.o] Error 1
